# youtube_clickbait

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.agent/: readme.md
.agent/SOPs/: exemplo-sop-template.md
.agent/system/: architecture.md  neo4j-schema.md  workflow.md
.agent/tasks/: melhorar-formulas-virais.md
.claude/: AUTONOMOUS_GUIDE.md  SIMPLIFICACAO.md  settings.json
.claude/agents/: autonomous_orchestrator.md  idea_validator.md  test_hybrid.md  video_title_creator.md
.claude/commands/: update_doc.md  youtube.md
.claude/hooks/: auto_approval.json  auto_save_output.py  log_agent_execution.py  neo4j_auto_persist.py  neo4j_learning_persister.py  post_tool_use_logger.py  pre_tool_use_auto_approve.py
claude-agent-sdk-python/: README.md
frontend-chat/: CHANGELOG.md  COMPLETADO_EM_70MIN.md  DEPLOYMENT.md  ENTREGA_FINAL.md  ESTATISTICAS_FINAIS.md  EXEMPLOS_TESTE.md  FEATURES_COMPLETAS.md  GUIA_USO.md  LEIA_PRIMEIRO.md  MISSAO_CUMPRIDA.md  PROJETO_COMPLETO.md  PROVA_CONCRETA_VIDEO.md  QUICK_START.md  README.md  README_FINAL.md  RESUMO_PARA_VOCE.md  SUMARIO_EXECUTIVO.md  VIDEO_SCRIPT.md  neo4j_worker.py  requirements.txt  start.sh  test_browser.py  test_system.py
frontend-chat/backend/: code_runner.py  neo4j_integration.py  server.py
frontend-chat/frontend/: app.js  autosave.js  debug-visual.js  index.html  metrics.js  (+5 more)
src/: agent_loader.py  agents_api.py  autonomous_system.py  autonomous_v2.py  cli.py  error_handler.py  neo4j_client.py  neo4j_direct.py  neo4j_executor.py  neo4j_executor_v2.py  pipeline.py  storage.py  tema_discovery.py
(+56 files in other folders)
