[project]
name = "youtube-clickbait"
version = "0.1.0"
description = "Sistema automatizado para gerar títulos virais de vídeos sobre Claude Agent SDK"
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.15.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "anyio>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
youtube-cli = "src.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
